removed unused options + added social links in options panel Signed-off-by:jonathanlermitage <jonathan.lermitage@gmail.com>